--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,13 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>El titulo del post 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
         <body>
         <div id="container">
         <div id="cabecera">
         Hyperblog
-<<<<<<< HEAD
-        <span id="tagline">Tu blog de maestro</span>
-=======
         <span id="tagline">Tu blog de cabecera error</span>
->>>>>>> cabecera
         </div>
         <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
